fix: parameterize hardcoded secrets, add deployment configs
- DB credentials use ${POSTGRES_PASSWORD:-postgres} pattern
- Grafana token default changed from "secret-token" to empty
- Add nats.conf and otel-collector config (required for deployment)
- Add .env.example with documented defaults for all vars
- Gitignore crash-dumps/, org-data/, certs/

--- a/.env.example
+++ b/.env.example
@@ -12,20 +12,27 @@ DEFAULT_IPV4=127.0.0.1
 
 # ─── Image Versions ───
 # Pin all service images here. OVA releases set these automatically.
-WEB_VERSION=0.8.6-rc48
-VUE_VERSION=0.8.6-rc48
+WEB_VERSION=0.8.6-rc50
+VUE_VERSION=0.8.6-rc49
 TRACEROUTE_VERSION=0.8.5-rc27
 JTAPI_VERSION=1.14.5
 CT_MEDIA_VERSION=0.2.5
+
+# ─── Database ───
+# POSTGRES_USER=calltelemetry
+# POSTGRES_PASSWORD=postgres
+# POSTGRES_DB=calltelemetry_prod
 
 # ─── Feature Profiles ───
 # Comma-separated list of Docker Compose profiles to activate.
 # Available profiles:
 #   jtapi  - Phone control stack (jtapi-sidecar, ct-media, minio)
+#   otel   - OpenTelemetry collector (metrics export to Prometheus)
 #
 # Examples:
 #   COMPOSE_PROFILES=          # Base services only
 #   COMPOSE_PROFILES=jtapi     # Base + JTAPI phone control
+#   COMPOSE_PROFILES=jtapi,otel # Base + JTAPI + OpenTelemetry
 COMPOSE_PROFILES=
 
 # ─── JTAPI Configuration ───
@@ -48,6 +55,9 @@ COMPOSE_PROFILES=
 # Grafana admin credentials (first-start only, ignored after initial provisioning)
 # GF_ADMIN_USER=admin
 # GF_ADMIN_PASSWORD=calltelemetry
-# PROM_EX_UPLOAD_DASHBOARDS=false
-# GRAFANA_HOST_INTERNAL=http://grafana:3000/grafana
-# GRAFANA_TOKEN=secret-token
+# GRAFANA_TOKEN=
+
+# OpenTelemetry (requires COMPOSE_PROFILES to include "otel")
+# OTEL_ENABLED=false
+# OTEL_SDK_DISABLED=true
+# OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
