--- a/ova/versions/0.8.6-rc48.yaml
+++ b/ova/versions/0.8.6-rc48.yaml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   caddy:
     image: caddy:2-alpine
@@ -8,16 +10,6 @@ services:
       - ./certs:/certs:ro
     networks:
       - ct
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "wget -q --spider http://127.0.0.1:80 || wget -q --spider http://127.0.0.1:2019/metrics",
-        ]
-      interval: 30s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
 
   vue-web:
     image: "calltelemetry/vue:0.8.6-rc48"
@@ -26,12 +18,6 @@ services:
       - "80"
     networks:
       - ct
-    healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider http://127.0.0.1:80"]
-      interval: 30s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
 
   traceroute:
     image: "calltelemetry/traceroute:0.8.5-rc27"
@@ -40,38 +26,21 @@ services:
       - "4100"
     networks:
       - ct
-    healthcheck:
-      test: ["CMD-SHELL", "bash -c 'exec 3<>/dev/tcp/127.0.0.1/4100'"]
-      interval: 30s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
 
   db:
     image: "calltelemetry/postgres:14"
     user: root
     restart: "always"
-    shm_size: "8gb"
     environment:
       - POSTGRES_USER=calltelemetry
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=calltelemetry_prod
-      - PGDATA=/bitnami/postgresql/data
-    command: >
-      postgres
-      -c max_connections=300
     expose:
       - "5432"
     volumes:
       - ./postgres-data:/bitnami/postgresql
     networks:
       - ct
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U calltelemetry -d calltelemetry_prod"]
-      interval: 30s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
 
   web:
     image: "calltelemetry/web:0.8.6-rc48"
@@ -95,104 +64,36 @@ services:
       - WORKER_NODE=TRUE
       - CERT_KEY=/home/app/cert/appliance_key.pem
       - CERT_PUBLIC=/home/app/cert/appliance.crt
-      # can be HACKNEY, IBROWSE, MINT, GUN or HTTPC.
       - HTTP_ADAPTER=HACKNEY
       - LOG_PATH=/var/log
-      - ERL_CRASH_DUMP=/tmp/crash-dumps/erl_crash.dump
-      - ERL_CRASH_DUMP_NICE=1
-      - PROM_EX_UPLOAD_DASHBOARDS=${PROM_EX_UPLOAD_DASHBOARDS:-false}
-      - GRAFANA_HOST=${GRAFANA_HOST_INTERNAL:-http://grafana:3000/grafana}
-      - GRAFANA_TOKEN=${GRAFANA_TOKEN:-secret-token}
     tmpfs:
       - /var/log:rw,mode=0555,size=5000m
     networks:
       - ct
     volumes:
       - ./certs:/home/app/cert:rw
-      - ./crash-dumps:/tmp/crash-dumps:rw
-      # Persistent org-scoped media storage (JTAPI audio, recordings, etc)
-      - ./org-data:/data:rw
     logging:
       driver: "json-file"
       options:
         max-size: "100m"
-        max-file: "7" # Keeps 7 days of logs
-        compress: "true" # Compresses rotated files
-    healthcheck:
-      test: ["CMD-SHELL", "curl -sf http://127.0.0.1:4080/healthz || exit 1"]
-      interval: 30s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+        max-file: "7"
+        compress: "true"
 
   nats:
     image: "nats:2.11"
     command: "-c /etc/nats/nats.conf"
     volumes:
       - ./nats.conf:/etc/nats/nats.conf
-      - nats-data:/jetstream/store
     expose:
       - "4222"
     networks:
       - ct
 
-  prometheus:
-    image: prom/prometheus:v2.52.0
-    restart: "always"
-    user: root
-    ports:
-      - "9090:9090"
-    command:
-      - --config.file=/etc/prometheus/prometheus.yml
-      # Retain a modest retention window to cap disk usage.
-      - --storage.tsdb.path=/prometheus
-      - --storage.tsdb.retention.time=15d
-      - --web.console.libraries=/usr/share/prometheus/console_libraries
-      - --web.console.templates=/usr/share/prometheus/consoles
-      - --web.external-url=/prometheus
-      - --web.route-prefix=/prometheus
-    volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus-data:/prometheus
-    networks:
-      - ct
-
-  grafana:
-    image: grafana/grafana:12.2.1
-    restart: "always"
-    user: "472"
-    depends_on:
-      - prometheus
-    ports:
-      - "3000:3000"
-    environment:
-      - GF_SECURITY_ADMIN_USER=${GF_ADMIN_USER:-admin}
-      - GF_SECURITY_ADMIN_PASSWORD=${GF_ADMIN_PASSWORD:-calltelemetry}
-      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
-      - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/var/lib/grafana/dashboards/calltelemetry-overview.json
-      - GF_SERVER_ROOT_URL=/grafana
-      - GF_SERVER_SERVE_FROM_SUB_PATH=true
-    volumes:
-      - ./grafana/provisioning:/etc/grafana/provisioning:ro
-      - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
-      - grafana-data:/var/lib/grafana
-    networks:
-      - ct
-
 networks:
   ct:
-    # enable_ipv6: true
 
 volumes:
   certs:
     driver: local
-  crash-dumps:
-    driver: local
   traefik-logs:
-    driver: local
-  prometheus-data:
-    driver: local
-  grafana-data:
-    driver: local
-  nats-data:
     driver: local
