fix: mark RC releases as prerelease to prevent overwriting stable version
create-ova-release.yml was creating GitHub releases without --prerelease,
so every RC triggered package-release.yml which saw it as stable and
overwrote latest-stable.txt on GCS. Now RC/beta/alpha versions are
automatically marked as prereleases, so only true stable releases
(e.g. 0.8.6 without suffix) update latest-stable.txt.

--- a/.github/workflows/create-ova-release.yml
+++ b/.github/workflows/create-ova-release.yml
@@ -227,8 +227,18 @@ jobs:
           # Push the commit
           git push
 
+          # Determine if this is a pre-release (any -rc, -beta, -alpha suffix)
+          PRERELEASE_FLAG=""
+          if echo "$VERSION" | grep -qE '-(rc|beta|alpha)'; then
+            PRERELEASE_FLAG="--prerelease"
+            echo "Marking as pre-release (version contains RC/beta/alpha suffix)"
+          else
+            echo "Marking as stable release (no pre-release suffix)"
+          fi
+
           # Create GitHub release with both version files
           gh release create "$VERSION" \
+            $PRERELEASE_FLAG \
             --title "CallTelemetry OVA $VERSION" \
             --notes "$(cat << NOTES_EOF
           ## CallTelemetry $VERSION
