fix: stop auto-forcing postgres override during upgrades
- Remove `version: "3.8"` from all postgres override yamls (obsolete)
- Remove auto-pin logic from cli.sh upgrade — no longer downloads
  docker-compose.override.yml without user action
- Postgres overrides still uploaded to GCS for manual `ct config postgres`
- Add 0.8.6-rc47.env for stable release

--- a/.github/workflows/package-release.yml
+++ b/.github/workflows/package-release.yml
@@ -293,7 +293,7 @@ jobs:
           gsutil cp "ova/prep.sh" "gs://${GCS_BUCKET}/prep.sh"
           echo "✅ Uploaded cli.sh and prep.sh to bucket root"
 
-          # Upload postgres override files
+          # Upload postgres override files (available for manual `ct config postgres`)
           for pg_file in ova/postgres-*.yaml; do
             if [ -f "$pg_file" ]; then
               gsutil cp "$pg_file" "gs://${GCS_BUCKET}/$(basename $pg_file)"
