--- a/ova/versions/0.8.6-rc47.env
+++ b/ova/versions/0.8.6-rc47.env
@@ -5,5 +5,5 @@
 WEB_VERSION=0.8.6-rc47
 VUE_VERSION=0.8.6-rc47
 TRACEROUTE_VERSION=0.8.4-rc147
-JTAPI_VERSION=0.8.6-rc47
+JTAPI_VERSION=1.14.5
 CT_MEDIA_VERSION=0.2.5
