revert: restore unified version scheme for JTAPI — triggered Docker builds
Reverts the 1.14.5 pinning. The unified release workflow stamps all
repos (including jtapi-sidecar) with the same version tag. The rc47/rc48
Docker builds for jtapi-sidecar were missing — now triggered manually.

--- a/ova/versions/0.8.6-rc48.env
+++ b/ova/versions/0.8.6-rc48.env
@@ -5,5 +5,5 @@
 WEB_VERSION=0.8.6-rc48
 VUE_VERSION=0.8.6-rc48
 TRACEROUTE_VERSION=0.8.5-rc27
-JTAPI_VERSION=1.14.5
+JTAPI_VERSION=0.8.6-rc48
 CT_MEDIA_VERSION=0.2.5
