--- a/.github/workflows/unified-release.yml
+++ b/.github/workflows/unified-release.yml
@@ -46,6 +46,7 @@ jobs:
             --repo calltelemetry/cisco-cdr \
             --target "${{ inputs.target_branch }}" \
             --title "${{ inputs.version }}" \
+            --prerelease \
             --notes "Unified release ${{ inputs.version }}"
 
       - name: Create ct-quasar release
@@ -57,6 +58,7 @@ jobs:
             --repo calltelemetry/ct-quasar \
             --target "${{ inputs.target_branch }}" \
             --title "${{ inputs.version }}" \
+            --prerelease \
             --notes "Unified release ${{ inputs.version }}"
 
       - name: Create jtapi-sidecar release
@@ -68,6 +70,7 @@ jobs:
             --repo calltelemetry/jtapi-sidecar \
             --target "${{ inputs.target_branch }}" \
             --title "${{ inputs.version }}" \
+            --prerelease \
             --notes "Unified release ${{ inputs.version }}"
 
       - name: Create ct-media release
@@ -80,6 +83,7 @@ jobs:
             --repo calltelemetry/ct-media \
             --target "${{ inputs.target_branch }}" \
             --title "$CT_MEDIA_TAG" \
+            --prerelease \
             --notes "Unified release $CT_MEDIA_TAG"
 
       - name: Summary
